@@ -1,5 +1,20 @@
 #! /bin/sh
 
+# make up a list of all extension subdirectories
+# for extensions/Makefile.am
+#DIST_SUBDIRS=`cd extensions; for f in *; do test -d $f && echo $f; done` 
+#DIST_SUBDIRS=`echo $DIST_SUBDIRS` # newlines -> spaces
+#echo "# automatically generated by autogen" > extensions/dist_subdirs.am
+#echo "DIST_SUBDIRS = $DIST_SUBDIRS" >> extensions/dist_subdirs.am
+
+# and gather a list of all configure.m4 files for autoconf
+
+echo "# automatically generated by autogen" > extensions/configure.m4
+for f in extensions/*/configure.m4; do
+    echo "m4_include([$f])" >> extensions/configure.m4
+done
+
+# and run the usual stuff
 aclocal -I config || exit 1
 automake || exit 1
 autoconf || exit 1
