@@ -1,3 +1,2 @@
 SUBDIRS = $(EXTENSIONS)
-# TODO: find a way to dynamically generate this list
-DIST_SUBDIRS = base svn cvs quilt
+DIST_SUBDIRS = $(DIST_EXTENSIONS)
