@@ -1,0 +1,6 @@
+include $(top_srcdir)/extensions/extension.am
+
+EXTENSION=autotools
+
+subcommands_SCRIPTS = configure make
+extlib_SCRIPTS = defaults.sh
