@@ -1,0 +1,11 @@
+#! /bin/bash
+
+test -z "$DEV_TASK" && die "No task loaded"
+TASKDIR_FILE="$AUTOTOOLS_BUILD_DIR/.taskdir"
+
+if ! test -f "$TASKDIR_FILE" || test "$DEV_TASK_DIR" != `<"$TASKDIR_FILE"`; then
+    die "$AUTOTOOLS_BUILD_DIR was not configured for this task."
+fi
+
+cd "$AUTOTOOLS_BUILD_DIR" || exit 1
+make "${@}"
