@@ -1,0 +1,6 @@
+# always build this extension
+
+EXTENSIONS="$EXTENSIONS base"
+DIST_EXTENSIONS="$DIST_EXTENSIONS base"
+
+AC_CONFIG_FILES([extensions/base/Makefile])
